--- a/bigdata-test-lib/pom.xml
+++ b/bigdata-test-lib/pom.xml
@@ -217,6 +217,11 @@
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.cliffc.high-scale-lib</groupId>
+				<artifactId>high-scale-lib</artifactId>
+				<version>1.1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -410,6 +415,11 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.cliffc.high-scale-lib</groupId>
+			<artifactId>high-scale-lib</artifactId>
+			<version>1.1.2</version>
 		</dependency>
 	</dependencies>
 </project>
