--- a/pom.xml
+++ b/pom.xml
@@ -196,11 +196,6 @@
 				<version>1.0.6</version> <!-- This package contains utils across different namespaces, including it.unimi.dsi -->
 			</dependency>
 			<dependency>
-				<groupId>org.cliffc.high-scale-lib</groupId>
-				<artifactId>high-scale-lib</artifactId>
-				<version>1.1.2</version>
-			</dependency>
-			<dependency>
 				<groupId>it.unimi.dsi</groupId>
 				<artifactId>fastutil</artifactId>
 				<version>5.1.5</version>
@@ -246,6 +241,11 @@
 				<groupId>colt</groupId>
 				<artifactId>colt</artifactId>
 				<version>1.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.stephenc.high-scale-lib</groupId>
+				<artifactId>high-scale-lib</artifactId>
+				<version>1.1.4</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
