--- a/bigdata-dependencies/pom.xml
+++ b/bigdata-dependencies/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>com.github.ansell</groupId>
-		<artifactId>bigdata-test-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>bigdata-parent</artifactId>
+		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
