--- a/bigdata-test-lib/pom.xml
+++ b/bigdata-test-lib/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.ansell</groupId>
-		<artifactId>bigdata-test-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>bigdata-parent</artifactId>
+		<version>1.1.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>bigdata-test</artifactId>
