--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.ansell</groupId>
-	<artifactId>bigdata-test-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>bigdata-parent</artifactId>
+	<version>1.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Parent for BigData test</name>
-	<description>Testing out BigData</description>
+	<name>Parent for BigData Maven package</name>
+	<description>BigData available as maven package</description>
 	<modules>
-		<module>bigdata-test-dependencies</module>
+		<module>bigdata-dependencies</module>
 		<module>bigdata-test-lib</module>
 	</modules>
 
