--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
 				<artifactId>high-scale-lib</artifactId>
 				<version>1.1.4</version>
 			</dependency>
+			<dependency>
+				<groupId>org.semanticweb.yars</groupId>
+				<artifactId>nxparser</artifactId>
+				<version>1.2.2-j7</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -282,8 +287,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>2.3.2</version>
 					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
+						<source>1.7</source>
+						<target>1.7</target>
 					</configuration>
 				</plugin>
 				<plugin>
