--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<sesametools.version>1.7-SNAPSHOT</sesametools.version>
 		<slf4j.version>1.6.4</slf4j.version>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -282,15 +282,20 @@
 				<version>1.1.4</version>
 			</dependency>
 			<dependency>
+				<groupId>org.cliffc.high-scale-lib</groupId>
+				<artifactId>high-scale-lib</artifactId>
+				<version>1.1.2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.semanticweb.yars</groupId>
 				<artifactId>nxparser</artifactId>
 				<version>1.2.2-j7</version>
 			</dependency>
-		    <dependency>
-		      <groupId>com.github</groupId>
-		      <artifactId>sesame-loader</artifactId>
-		      <version>0.1.0-SNAPSHOT</version>
-		    </dependency>
+			<dependency>
+				<groupId>com.github</groupId>
+				<artifactId>sesame-loader</artifactId>
+				<version>0.1.0-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
